# HexMod

./: .gitignore  .pre-commit-config.yaml  0001-Proofread-pass-2-Electric-boogaloo.patch  CHANGELOG.md  Jenkinsfile  LICENSE.txt  README.md  build.gradle  changelog.txt  collate_data.py  compile-mixins.txt  compile-output.txt  contributors.properties  contributors.toml  gradle.properties  index.html  nodemon.json  original_ideas_doc.txt  pyproject.toml  settings.gradle  settings.gradle.kts  slushfile.txt  template.html  todo.txt
doc/: .gitignore  LICENSE.txt  README.md  TODO.md  collate_data.py  cookiecutter.json  hexdoc.toml  nodemon.json  properties.toml  pyproject.toml  requirements-dev.txt  requirements.txt  template.html
doc/resources/assets/farmersdelight/lang/: en_us.json  ja_jp.json  ko_kr.json  ru_ru.json  zh_cn.json
doc/resources/assets/hexcasting/lang/: en_us.flatten.json5  ja_jp.flatten.json5  ko_kr.flatten.json5  ru_ru.flatten.json5  zh_cn.flatten.json5
doc/resources/assets/minecraft/: LICENSE
doc/resources/assets/minecraft/lang/: zh_cn.json
doc/src/: collate_data.py  main.py
doc/src/common/: abstract.py  composition.py  dacite_patch.py  deserialize.py  formatting.py  jinja_extensions.py  model.py  pattern.py  pattern_info.py  properties.py  state.py  tagged_union.py  templates.py  toml_placeholders.py  types.py  utils.py
doc/src/hexcasting/: __init__.py  abstract_hex_pages.py  hex_book.py  hex_pages.py  hex_recipes.py  hex_state.py  pattern.py
doc/src/hexcasting/scripts/: collate_data.py  main.py
doc/src/hexdoc/: __version__.py  hexdoc.py  hexdoc_merge.py  jinja_extensions.py  properties.py  resource.py
doc/src/hexdoc/_book_data/: __init__.py
doc/src/hexdoc/_export/: __init__.py
doc/src/hexdoc/_templates/: book.html.jinja  category.html.jinja  entry.html.jinja  index.css.jinja  index.html.jinja  index.js.jinja  main.css  main.css.jinja  main.html.jinja  main.js  main.js.jinja  textures.jcss.jinja
doc/src/hexdoc/_templates/common/: macros.html.jinja
doc/src/hexdoc/_templates/components/: navbar.html.jinja  table_of_contents.html.jinja  welcome.html.jinja
doc/src/hexdoc/_templates/macros/: formatting.html.jinja  recipes.html.jinja  styles.html.jinja
doc/src/hexdoc/cli/: load.py  main.py  render.py  sitemap.py
doc/src/hexdoc/cli/utils/: load.py  logging.py  render.py  sitemap.py
doc/src/hexdoc/core/: loader.py  metadata.py  properties.py  resource.py  resource_dir.py
doc/src/hexdoc/hexcasting/: __init__.py  _hooks.py  hex_book.py  hex_recipes.py  hooks.py  pattern.py
doc/src/hexdoc/hexcasting/page/: __init__.py  abstract_hex_pages.py  hex_pages.py
doc/src/hexdoc/minecraft/: __init__.py  _hooks.py  assets.py  i18n.py  tags.py
doc/src/hexdoc/minecraft/assets/: __init__.py  models.py  textures.py
doc/src/hexdoc/minecraft/recipe/: __init__.py  abstract_recipes.py  ingredients.py  recipes.py
doc/src/hexdoc/model/: __init__.py  base.py  id.py  inline.py  strip_hidden.py  tagged_union.py
doc/src/hexdoc/patchouli/: __init__.py  _hooks.py  book.py  book_context.py  book_models.py  category.py  entry.py  model.py  text.py
doc/src/hexdoc/patchouli/page/: __init__.py  abstract_pages.py  pages.py
doc/src/hexdoc/patchouli/text/: __init__.py  formatting.py  html.py
doc/src/hexdoc/plugin/: __init__.py  helpers.py  hookspecs.py  manager.py  specs.py
doc/src/hexdoc/scripts/: hexdoc.py  hexdoc_merge.py
doc/src/hexdoc/utils/: __init__.py  cd.py  classproperty.py  compat.py  contextmanagers.py  deserialize.py  external.py  iterators.py  jinja_extensions.py  metadata.py  model.py  path.py  properties.py  resource.py  resource_loader.py  resource_model.py  singletons.py  tagged_union.py  toml_placeholders.py  types.py
doc/src/hexdoc/utils/deserialize/: __init__.py  assertions.py  json.py  toml.py
doc/src/hexdoc/utils/jinja/: extensions.py  (+1 more)
doc/src/hexdoc_hexcasting/: __version__.py  _hooks.py  metadata.py
doc/src/hexdoc_hexcasting/_templates/: hexcasting.js.jinja  hexcasting_render.js.jinja  index.css.jinja  index.html.jinja  render.js.jinja
doc/src/hexdoc_hexcasting/book/: recipes.py
doc/src/hexdoc_hexcasting/utils/: constants.py  pattern.py
doc/src/minecraft/: i18n.py  recipe.py  resource.py
doc/src/minecraft/recipe/: __init__.py  abstract.py  abstract_recipes.py  concrete.py  ingredient.py  ingredients.py  minecraft_recipes.py  recipes.py  result.py
doc/src/patchouli/: __init__.py  book.py  category.py  context.py  entry.py  formatting.py  hex_book.py  page.py  state.py  types.py
doc/src/patchouli/page/: __init__.py  abstract.py  abstract_pages.py  concrete.py  hexcasting.py  pages.py  patchouli_pages.py
doc/src/patchouli/text/: __init__.py  formatting.py  html.py  tags.py
doc/templates/: book.html.jinja  category.html.jinja  entry.html.jinja  macros.html.jinja  main.css.jinja  main.html.jinja  main.js  table_of_contents.html.jinja  tableofcontents.html.jinja
doc/templates/pages/: BrainsweepPage.html.jinja  CraftingMultiPage.html.jinja  CraftingPage.html.jinja  ImagePage.html.jinja  LinkPage.html.jinja  LookupPatternPage.html.jinja  Page.html.jinja  PageWithPattern.html.jinja  PageWithText.html.jinja  PageWithTitle.html.jinja  SpotlightPage.html.jinja
doc/templates/pages/abstract/: Page.html.jinja  PageWithTitle.html.jinja
doc/test/: conftest.py  test_formatting.py  test_snapshot.py  test_snapshots.py
doc/test/__snapshots__/: test_snapshot.ambr  test_snapshots.ambr
doc/test/cli/: test_main.py
doc/test/common/: test_formatting.py  test_types.py
doc/test/core/: test_resource.py
doc/test/hexcasting/: test_hex_book.py
doc/test/hooks/: test_manager.py
doc/test/minecraft/: resource.py  test_resource.py
doc/test/patchouli/: test_formatting.py  test_text.py
doc/test/patchouli/text/: test_formatting.py
doc/test/utils/: test_types.py
doc/test/utils/text/: test_formatting.py
doc/{{cookiecutter.output_directory}}/: .gitignore  pyproject.toml
doc/{{cookiecutter.output_directory}}/.github/workflows/: build_docs.yml
doc/{{cookiecutter.output_directory}}/doc/: README.md  properties.toml
(+12729 files in other folders)
