[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "hexdoc"
version = "0.1.0+0.11.1-7" # TODO: make a Hatch plugin to auto-set the mod version after the +
authors = [
    { name="Alwinfy" },
    { name="object-Object", email="object@objectobject.ca" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typing_extensions>=4.7.0",
    "importlib_resources>=6.0.1",
    "pydantic>=2.3.0",
    "Jinja2>=3.1.2",
    "pyjson5>=1.6.3",
]

[project.optional-dependencies]
dev = [
    "black==23.7.0",
    "isort==5.12.0",
    "pytest>=7.3.1",
    "syrupy>=4.0.2",
    "hatchling",
]

[project.scripts]
hexdoc = "hexdoc.hexdoc:main"

[project.entry-points."hexdoc.export"]
hexcasting = "hexdoc._export:__resources__"

[project.entry-points."hexdoc.Page"]
patchouli = "hexdoc.patchouli.page.pages"
hexcasting = "hexdoc.hexcasting.page.hex_pages"

[project.entry-points."hexdoc.Recipe"]
minecraft = "hexdoc.minecraft.recipe.recipes"
hexcasting = "hexdoc.hexcasting.hex_recipes"

[project.entry-points."hexdoc.ItemIngredient"]
minecraft = "hexdoc.minecraft.recipe.ingredients"
hexcasting = "hexdoc.hexcasting.hex_recipes"

[project.entry-points."hexdoc.BrainsweepeeIngredient"]
hexcasting = "hexdoc.hexcasting.hex_recipes"


[tool.hatch.build]
packages = ["src/hexdoc"]


[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]


[tool.coverage.report]
include_namespace_packages = true


[tool.isort]
profile = "black"
combine_as_imports = true


[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

# mostly we use strict mode
# but pyright doesn't allow decreasing error severity in strict mode
# so we need to manually specify all of the strict mode overrides so we can do that :/
typeCheckingMode = "basic"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportAssertAlwaysTrue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportMissingTypeStubs = "error"
reportOverlappingOverload = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportUnknownParameterType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryContains = "error"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "error"

reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance =  	"warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"

reportUnknownVariableType = "none"
